--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   firebase_auth: ^4.16.0
   google_sign_in: ^6.1.6
   fluttertoast: ^8.2.5
+  cached_network_image: ^3.2.3
+  heroicons: ^0.8.0
+  flutter_html: ^0.11.1
 
 dev_dependencies:
   flutter_test:
