--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,20 @@ dependencies:
   cached_network_image: ^3.2.3
   heroicons: ^0.8.0
   flutter_html: ^0.11.1
+  nuts_activity_indicator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  hive_generator: ^1.1.3
+  build_runner: ^2.1.11
+  flutter_launcher_icons: ^0.11.0
   flutter_lints: ^2.0.0
-
+flutter_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icons/logo.png"
 flutter:
 
   uses-material-design: true
